# MyDevRepository

./: README.md
GeekBrains_HW/: HomeWork.cpp
GeekBrains_HW/Algorithm_HW/HW_1/: main.c
GeekBrains_HW/Algorithm_HW/HW_10/L10_HW/: CMakeLists.txt  main.c
GeekBrains_HW/Algorithm_HW/HW_10/L10_HW/sources/: CMakeLists.txt  geek.h
GeekBrains_HW/Algorithm_HW/HW_12/: CMakeLists.txt  lesson_12_HW  lesson_12_HW.c
GeekBrains_HW/Algorithm_HW/HW_12/geek_c/: CMakeLists.txt
GeekBrains_HW/Algorithm_HW/HW_13/: CMakeLists.txt  lesson_13_HW.c  main.c
GeekBrains_HW/Algorithm_HW/HW_13/geek_c/: CMakeLists.txt  geek.h
GeekBrains_HW/Algorithm_HW/HW_15/: geek.c  geek.h  lesson_15.c
GeekBrains_HW/Algorithm_HW/HW_16/: lesson_16.c
GeekBrains_HW/Algorithm_HW/HW_2/: main.c
GeekBrains_HW/Algorithm_HW/HW_3/: main.c
GeekBrains_HW/Algorithm_HW/HW_6/: main.c
GeekBrains_HW/Algorithm_HW/HW_7/: main.c
GeekBrains_HW/Algorithm_HW/HW_9/: main.c
GeekBrains_HW/CWs_with_unknown_errors/lesson_13_3_wt/: CMakeLists.txt  lesson_13_3_wt  lesson_13_3_wt.c
GeekBrains_HW/CWs_with_unknown_errors/lesson_13_3_wt/geek_c/: geek.c
GeekBrains_HW/GeekBrainsC_HW/: HomeWorkC_1.c  HomeWorkC_2.c  main.c
GeekBrains_HW/Lesson_5_HW/: HomeWork-4.cpp  HomeWork_1.cpp  HomeWork_2.cpp  HomeWork_3.cpp  HomeWork_4.cpp  HomeWork_5.cpp  namespace_related.h  namespace_related2.cpp
GeekBrains_HW/Lesson_6_HW/: file1.txt  file2.txt  file3.txt  functions.h  main.cpp
GeekBrains_HW/Lesson_7_HW/: main.cpp
GeekBrains_HW/Lesson_8_HW/: main.cpp
TicTacToe/: main.cpp
